--- a/conf/debugger.yaml
+++ b/conf/debugger.yaml
@@ -13,7 +13,18 @@ cudnn_enabled: True
 cudnn_benchmark: False
 ignore_layers: ['embedding.weight']
 
+################################
+# Data Parameters             #
+################################
+load_mel_from_disk: True
+text_cleaners: ['english_cleaners']
 
+
+data_training_files: './vctk_aux/vctk_train.csv'
+data_validation_files: './vctk_aux/vctk_val.csv'
+
+training_files: './vctk_aux/train_debug.txt'
+validation_files: './vctk_aux/val_debug.txt'
 ################################
 # Features Parameters        #
 ################################
@@ -33,5 +44,55 @@ trim_frame_size: 1024
 trim_hop_size: 124
 trim_treshold_in_db: 25
 
-training_files: './vctk_aux/vctk_train.csv'
-validation_files: './vctk_aux/vctk_val.csv'
+################################
+# Model Parameters             #
+################################
+
+model: 'Tacotron2_EncSpeakEmb'
+
+n_symbols: 148
+symbols_embedding_dim: 512
+
+# Encoder parameters
+encoder_kernel_size: 5
+encoder_n_convolutions: 3
+encoder_embedding_dim: 512
+
+# Decoder parameters
+n_frames_per_step: 1  # currently only 1 is supported
+decoder_rnn_dim: 1024
+prenet_dim: 256
+max_decoder_steps: 1000
+gate_threshold: 0.5
+p_attention_dropout: 0.1
+p_decoder_dropout: 0.1
+
+# Attention parameters
+attention_rnn_dim: 1024
+attention_dim: 128
+
+# Location Layer parameters
+attention_location_n_filters: 32
+attention_location_kernel_size: 31
+
+# Mel-post processing network parameters
+postnet_embedding_dim: 512
+postnet_kernel_size: 5
+postnet_n_convolutions: 5
+
+################################
+# Optimization Hyperparameters #
+################################
+use_saved_learning_rate: False
+learning_rate: 1e-3
+weight_decay: 1e-6
+grad_clip_thresh: 1.0
+batch_size: 2
+mask_padding: True  # set model's padded outputs to padded values
+
+################################
+# Speaker Embedding Hyperparameters #
+################################
+
+max_emb_size: 109
+speaker_embedding_dim: 512 
