--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 matplotlib==2.1.0
-tensorflow==1.15.2
 numpy==1.16.4
 inflect==0.2.5
 librosa==0.7.2
+numba==0.48
 scipy==1.0.0
 Unidecode==1.0.22
 pillow
+pyyaml==5.3.1
