--- a/experiments/debug/config.json
+++ b/experiments/debug/config.json
@@ -1,14 +1,14 @@
 {
     "model": "Tacotron2",
-    "run_name": "3speakers_gst-ddc",
+    "run_name": "ljspeech-ddc",
     "run_description": "tacotron2 with DDC and differential spectral loss.",
 
-     // AUDIO PARAMETERS
+    // AUDIO PARAMETERS
     "audio":{
         // stft parameters
-        "fft_size": 512,         // number of stft frequency levels. Size of the linear spectogram frame.
-        "win_length": 512,      // stft window length in ms.
-        "hop_length": 128,       // stft window hop-lengh in ms.
+        "fft_size": 1024,         // number of stft frequency levels. Size of the linear spectogram frame.
+        "win_length": 1024,      // stft window length in ms.
+        "hop_length": 256,       // stft window hop-lengh in ms.
         "frame_length_ms": null, // stft window length in ms.If null, 'win_length' is used.
         "frame_shift_ms": null,  // stft window hop-lengh in ms. If null, 'hop_length' is used.
 
@@ -27,8 +27,8 @@
 
         // MelSpectrogram parameters
         "num_mels": 80,         // size of the mel spec frame.
-        "mel_fmin": 0.0,        // minimum freq level for mel-spec. ~50 for male and ~95 for female voices. Tune for dataset!!
-        "mel_fmax": 8000.0,     // maximum freq level for mel-spec. Tune for dataset!!
+        "mel_fmin": 50.0,        // minimum freq level for mel-spec. ~50 for male and ~95 for female voices. Tune for dataset!!
+        "mel_fmax": 7600.0,     // maximum freq level for mel-spec. Tune for dataset!!
         "spec_gain": 1,
 
         // Normalization parameters
@@ -43,13 +43,14 @@
     // VOCABULARY PARAMETERS
     // if custom character set is not defined,
     // default set in symbols.py is used
-    //"characters":{
-    //    "pad": "_",
-    //    "eos": "~",
-    //    "bos": "^",
-    //   "characters": "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz!\'(),-.:;? ",
-    //    "punctuations":"!'(),-.:;? ",
-    //},
+    // "characters":{
+    //     "pad": "_",
+    //     "eos": "~",
+    //     "bos": "^",
+    //     "characters": "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz!'(),-.:;? ",
+    //     "punctuations":"!'(),-.:;? ",
+    //     "phonemes":"iyɨʉɯuɪʏʊeøɘəɵɤoɛœɜɞʌɔæɐaɶɑɒᵻʘɓǀɗǃʄǂɠǁʛpbtdʈɖcɟkɡqɢʔɴŋɲɳnɱmʙrʀⱱɾɽɸβfvθðszʃʒʂʐçʝxɣχʁħʕhɦɬɮʋɹɻjɰlɭʎʟˈˌːˑʍwɥʜʢʡɕʑɺɧɚ˞ɫ"
+    // },
 
     // DISTRIBUTED TRAINING
     "distributed":{
@@ -61,9 +62,9 @@
 
     // TRAINING
     "batch_size": 32,       // Batch size for training. Lower values than 32 might cause hard to learn attention. It is overwritten by 'gradual_training'.
-    "eval_batch_size":16,
+    "eval_batch_size":1,
     "r": 7,                 // Number of decoder frames to predict per iteration. Set the initial values if gradual training is enabled.
-    "gradual_training": [[0, 5, 28], [1, 4, 28], [70000, 3, 28], [100000, 2, 25], [130000, 1, 25]], //set gradual training steps [first_step, r, batch_size]. If it is null, gradual training is disabled. For Tacotron, you might need to reduce the 'batch_size' as you proceeed.
+    "gradual_training": [[0, 7, 1], [1, 5, 1], [50000, 3, 1], [130000, 2, 32], [290000, 1, 32]], //set gradual training steps [first_step, r, batch_size]. If it is null, gradual training is disabled. For Tacotron, you might need to reduce the 'batch_size' as you proceeed.
     "apex_amp_level": null,     // level of optimization with NVIDIA's apex feature for automatic mixed FP16/FP32 precision (AMP), NOTE: currently only O1 is supported, and use "O1" to activate.
 
     // LOSS SETTINGS
@@ -82,9 +83,9 @@
     // OPTIMIZER
     "noam_schedule": false,        // use noam warmup and lr schedule.
     "grad_clip": 1.0,              // upper limit for gradients for clipping.
-    "epochs": 500,                // total number of epochs to train.
-    "lr": 0.001,                  // Initial learning rate. If Noam decay is active, maximum learning rate.
-    "wd": 0.00001,                // Weight decay weight.
+    "epochs": 3,                // total number of epochs to train.
+    "lr": 0.0001,                  // Initial learning rate. If Noam decay is active, maximum learning rate.
+    "wd": 0.000001,                // Weight decay weight.
     "warmup_steps": 4000,          // Noam decay steps to increase the learning rate from 0 to "lr"
     "seq_len_norm": false,         // Normalize eash sample loss with its length to alleviate imbalanced datasets. Use it if your dataset is small or has skewed distribution of sequence lengths.
 
@@ -104,7 +105,7 @@
     "location_attn": true,         // enable_disable location sensitive attention. It is enabled for TACOTRON by default.
     "bidirectional_decoder": false,  // use https://arxiv.org/abs/1907.09006. Use it, if attention does not work well with your dataset.
     "double_decoder_consistency": true,  // use DDC explained here https://erogol.com/solving-attention-problems-of-tts-models-with-double-decoder-consistency-draft/
-    "ddc_r": 5,                           // reduction rate for coarse decoder.
+    "ddc_r": 7,                           // reduction rate for coarse decoder.
 
     // STOPNET
     "stopnet": true,               // Train stopnet predicting the end of synthesis.
@@ -114,12 +115,12 @@
     "print_step": 25,       // Number of steps to log training on console.
     "tb_plot_step": 100,    // Number of steps to plot TB training figures.
     "print_eval": false,     // If True, it prints intermediate loss values in evalulation.
-    "save_step": 1000,      // Number of training steps expected to save traninpg stats and checkpoints.
+    "save_step": 10000,      // Number of training steps expected to save traninpg stats and checkpoints.
     "checkpoint": true,     // If true, it saves checkpoints per "save_step"
     "tb_model_param_stats": false,     // true, plots param stats per layer on tensorboard. Might be memory consuming, but good for debugging.
 
     // DATA LOADING
-    "text_cleaner": "basic_cleaners",
+    "text_cleaner": "phoneme_cleaners",
     "enable_eos_bos_chars": false, // enable/disable beginning of sentence and end of sentence chars.
     "num_loader_workers": 4,        // number of training data loader processes. Don't set it too big. 4-8 are good values.
     "num_val_loader_workers": 4,    // number of evaluation data loader processes.
@@ -139,15 +140,17 @@
     "use_speaker_embedding": true,      // use speaker embedding to enable multi-speaker learning.
     "use_gst": true,       			    // use global style tokens
     "use_external_speaker_embedding_file": false, // if true, forces the model to use external embedding per sample instead of nn.embeddings, that is, it supports external embeddings such as those used at: https://arxiv.org/abs /1806.04558
-    "external_speaker_embedding_file": null, // if not null and use_external_speaker_embedding_file is true, it is used to load a specific embedding file and thus uses these embeddings instead of nn.embeddings, that is, it supports external embeddings such as those used at: https://arxiv.org/abs /1806.04558
+    "external_speaker_embedding_file": "../../speakers-vctk-en.json", // if not null and use_external_speaker_embedding_file is true, it is used to load a specific embedding file and thus uses these embeddings instead of nn.embeddings, that is, it supports external embeddings such as those used at: https://arxiv.org/abs /1806.04558
+    "use_style_embedding": true, 
+    "use_one_hot_style": true,
     "gst":	{			                // gst parameter if gst is enabled
         "gst_style_input": null,        // Condition the style input either on a
                                         // -> wave file [path to wave] or
                                         // -> dictionary using the style tokens {'token1': 'value', 'token2': 'value'} example {"0": 0.15, "1": 0.15, "5": -0.15}
                                         // with the dictionary being len(dict) <= len(gst_style_tokens).
-        "gst_embedding_dim": 256,
+        "gst_embedding_dim": 512,
         "gst_num_heads": 1,
-        "gst_style_tokens": 3,
+        "gst_style_tokens": 2,
         "gst_use_speaker_embedding": false
 	},
 
@@ -155,26 +158,11 @@
     "datasets":   // List of datasets. They all merged and they get different speaker_ids.
         [
             {
-                "name": "rosana",
-                "path": "./cpqd_aux/",
-                "meta_file_train": "rosana_train.csv", // for vtck if list, ignore speakers id in list for train, its useful for test cloning with new speakers
-                "meta_file_val": "rosana_val.csv"
-            },
-
-            {
-                "name": "vctk_direct",
-                "path": "./cpqd_aux/",
-                "meta_file_train": "alfredo_train.csv", // for vtck if list, ignore speakers id in list for train, its useful for test cloning with new speakers
-                "meta_file_val": "alfredo_val.csv"
-            },
-
-            {
-                "name": "vctk_direct",
-                "path": "./cpqd_aux/",
-                "meta_file_train": "carlos_train.csv", // for vtck if list, ignore speakers id in list for train, its useful for test cloning with new speakers
-                "meta_file_val": "carlos_val.csv"
+                "name": "style_reader",
+                "path": "./experiments/debug/",
+                "meta_file_train": "debug_meta.csv", // for vtck if list, ignore speakers id in list for train, its useful for test cloning with new speakers
+                "meta_file_val": "debug_meta.csv"
             }
-		
         ]
 }
 
